# full-stack-genai-python-coaching

./: main.py  pdf-loader.py  pyproject.toml  reterive-chain-of-thoughts.py  retreive-reciprocal-rank-fusion-method.py
Pydantic/01_Basics/: main.py  pyproject.toml
Pydantic/02_default_types/: main.py  pyproject.toml
Pydantic/03_typing_with_pydantic/: main.py  pyproject.toml
Pydantic/04_Field_validation/: main.py  pyproject.toml
RAG/: pdf-loader.py  retreive-hypthothetical-method.py  retreive-parrallel-query-method.py  retreive-step-back-method.py  retreive.py
agents/: cli-coding-agent-openai.py  weather-agent.py  web_search.py
agents/audio-agent/: weahter-agent-openai-api-method.py
hello_world/: gemini-hello.py  openai-compatible.py  openai-hello.py  pyproject.toml
langgraph/: langgraph-docs-method.py  main.py  main2.py
langgraph/edges/: conditonal-edge.py  parallel-edge.py  serial-edges.py
prompts/: agent-openai-pydantic.py  agent.py  auto-cot-gemini.py  auto-cot-openai.py  chain-of-thoughts-gemini.py  chain-of-thoughts-openai.py  few-shot-gemini.py  few-shot-openai.py  persona-openai.py  pyproject.toml  structured-output-gemini.py  structured-output-openai.py  structured-output.py  zero-shot-gemini.py  zero-shot-openai.py  zero-shot.py
python/virtual-env/: requirements.txt
tokenizer/: main.py
